<resources>
    <string name="app_name">TSR_Demo</string>

    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>

    <string name="authen_username">Username</string>
    <string name="authen_password">Password</string>
    <string name="authen_sign_in">Sign in</string>
    <string name="authen_sign_up">Sign up</string>
    <string name="authen_sign_in_fb">Sign in with facebook</string>
    <string name="authen_string_sign_up">Don\'t have an account yet?</string>
    <string name="authen_skip">SKIP</string>
    <string name="authen_or">or</string>

    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_complete">Complete</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_loading">Loading</string>

    <string name="form_title_personal_data">Private Information</string>
    <string name="form_title_sign_in_data">Create Account</string>
    <string name="form_hint_first_name">First name</string>
    <string name="form_hint_last_name">Last name</string>
    <string name="form_hint_mobile">Mobile</string>
    <string name="form_hint_id_number">Id number</string>
    <string name="form_hint_email">Email</string>
    <string name="form_hint_password">Password</string>
    <string name="form_hint_confirm_password">Confirm password</string>
    <string name="form_button_apply">APPLY</string>
    <string name="form_password_policy">Please note that your password must be between 8-20 digits long,
        and contain at least one number and capital letter. Symbols will not be recognized. “For example, Abc123456, ABC123456”</string>
    <string name="form_confirm_password_status_invalid">Password mismatch!</string>
    <string name="form_confirm_password_status_valid">Password match!</string>
    <string name="form_confirm_email_invalid">Invalid email!</string>
    <string name="form_error_dialog">Please enter your information</string>

    <string name="signup_activity_title">SIGN UP</string>

    <string name="menu_title_menu">Menu</string>
    <string name="menu_1">Product</string>
    <string name="menu_2">Profile</string>
    <string name="menu_3">Sign up</string>
    <string name="menu_title_system">System</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="tab_name_item_1">Item 1</string>
    <string name="tab_name_item_2">Item 2</string>
    <string name="tab_name_item_3">Item 3</string>

    <string name="activity_title_filter">Filter</string>
    <string name="activity_title_view">View</string>

    <string name="filter_name_1">Water purifier</string>
    <string name="filter_name_2">Purifier</string>
    <string name="filter_name_3">Water heater</string>

    <string name="menu_clear">Clear all</string>

    <string name="product_title_price">Price</string>
    <string name="product_title_name">Name</string>
    <string name="product_title_detail"><b>Description</b></string>
    <string name="product_thai_bath">Bath</string>

    <string name="add_to_cart">Add to cart</string>
    <string name="check_out">Payment channel</string>

    <string name="add_cart_warning">Please insert at least 1 item</string>

    <string name="remember_me">Remember me</string>

    <string name="footer_button_close">Close</string>
    <string name="footer_button_confirm">Apply</string>

    <string name="condition">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>

    <string name="terms_and_condition">I agree and accept the Privacy Policy and Terms and Conditions</string>

    <string name="eula_string"><b>PRIVACY POLICY</b>\tCopyright 2017 Thien Surat Co.,Ltd. All Rights Reserved.

\n\n\tThank you for visiting www.safealkaline.com web site. This privacy policy tells you how we use personal information
collected at this site. Please read this privacy policy before using the site or submitting any personal information.
By using the site, you are accepting the practices described in this privacy policy. These practices may be changed,
but any changes will be posted and changes will only apply to activities and information on a going forward,
not retroactive basis. You are encouraged to review the privacy policy whenever you visit the site to make sure that
you understand how any personal information you provide will be used.

\n\nNote: The privacy practices set forth in this privacy policy are for this web site only. If you link to other web sites,
        please review the privacy policies posted at those sites.

\n\n<b>Collection of Information</b>
       \n\tWe collect personally identifiable information, like names, postal addresses, email addresses, etc.,
           when voluntarily submitted by our visitors. The information you provide is used to fulfill you specific request and order.
           This information is only used to fulfill your specific request and order, unless you give us permission to use it in
           another manner, for example to add you to one of our mailing lists.

\n\n<b>Cookie/Tracking Technology</b>
       \n\tThe Site may use cookie and tracking technology depending on the features offered. Cookie and tracking technology are useful
           for gathering information such as browser type and operating system, tracking the number of visitors to the Site,
           and understanding how visitors use the Site. Cookies can also help customize the Site for visitors. Personal information
           cannot be collected via cookies and other tracking technology, however, if you previously provided personally identifiable
           information, cookies may be tied to such information. Aggregate cookie and tracking information may be shared with third parties.

\n\n<b>Distribution of Information</b>
       \n\tWe may share information with governmental agencies or other companies assisting us in fraud prevention or investigation.
            We may do so when: (1) permitted or required by law; or, (2) trying to protect against or prevent actual or potential fraud or
            unauthorized transactions; or, (3) investigating fraud which has already taken place. The information is not provided to these
            companies for marketing purposes.

\n\n<b>Commitment to Data Security</b>
       \n\tYour personally identifiable information is kept secure. Only authorised employees, agents and contractors
            (who have agreed to keep information secure and confidential) have access to this information. All emails and
            newsletters from this site allow you to opt out of further mailings.

\n\n<b>Sensitive information security</b>
       \n\tThis website takes every precaution to protect our customer when they submit sensitive information via the website.
          During this process a customer will enroll for a webpage certificate which will allow information sent to be encrypted
          and protected using the latest Secure Sockets Layer (SSL). This includes the submission of any payment information such as
          credit card details.
    </string>
</resources>
