<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustPan|adjustResize"
    tools:context=".activity.signup.SignUPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_title_personal_data"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextForm">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_hint_first_name"
                        android:textColor="@color/DarkGray"
                        android:imeOptions="actionNext"
                        android:inputType="text|textNoSuggestions|textCapWords"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextForm">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_hint_last_name"
                        android:textColor="@color/DarkGray"
                        android:imeOptions="actionNext"
                        android:inputType="text|textNoSuggestions|textCapWords"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextForm">

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_hint_mobile"
                        android:textColor="@color/DarkGray"
                        android:imeOptions="actionNext"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_title_sign_in_data"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextForm">

                    <EditText
                        android:id="@+id/email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_hint_email"
                        android:textColor="@color/DarkGray"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress|textNoSuggestions"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/email_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextForm">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_hint_password"
                        android:textColor="@color/DarkGray"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword|textNoSuggestions"
                        android:maxLength="20"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/hintPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_password_policy"
                    android:textColor="@color/Black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextForm">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_hint_confirm_password"
                        android:textColor="@color/DarkGray"
                        android:imeOptions="actionDone"
                        android:maxLength="20"
                        android:inputType="textPassword|textNoSuggestions"
                        android:singleLine="true"
                        android:requiresFadingEdge="horizontal"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/confirmPasswordStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/agreeTerm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:text="@string/terms_and_condition"
                        android:textColorHighlight="@android:color/transparent"
                        android:textColorLink="@color/colorAccent"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/form_button_apply"
            android:textColor="@color/White"
            android:textSize="18sp"/>

    </RelativeLayout>

</RelativeLayout>
