<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustPan|adjustResize"
    tools:context="com.example.teerayutk.tsr_demo.activity.authentication.AuthenticationActivity">

    <RelativeLayout
        android:id="@+id/change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="16dp">

        <Button
            android:id="@+id/button_language"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="TH"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/circle_shape"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/tsr_logo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline_white_48dp"
                    android:hint="@string/authen_username"
                    android:drawableTint="@color/White"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions|textCapCharacters"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/user_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_lock_outline_white_48dp"
                    android:hint="@string/authen_password"
                    android:drawableTint="@color/White"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authen_sign_in"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/White"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:padding="6dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/remember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/White"
                    app:buttonTint="@color/White"/>

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="14sp"
                    android:textColor="@color/White"
                    android:text="@string/authen_skip"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:gravity="right"
                android:text="@string/authen_string_sign_up"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/authen_sign_up"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
